Move dropzone-overlay z-index. Fixes #89

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -239,6 +239,7 @@ a
   top: 0
   width: 100%
   min-height: 100%
+  z-index: 100
 
 .inverted
   color: white
